--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "owen-it/laravel-auditing": "^11.0",
         "spatie/laravel-permission": "^3.17"
     },
     "require-dev": {
