--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "laravel/laravel",
+    "name": "maxiewright/serviceperson-management-system",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "HIRS Solution for the military",
     "keywords": [
-        "framework",
-        "laravel"
+        "serviepeople",
+        "military",
+        "Human Resource"
     ],
     "license": "MIT",
     "require": {
